objects/Recent_Channel__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Id__c</fullName>
        <label>Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slack_Auth__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Slack Auth</label>
        <referenceTo>Slack_Auth__c</referenceTo>
        <relationshipName>Recent_Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Recent Channel</label>
    <nameField>
        <label>Recent Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>